--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/detailedActMovieTitleColor"
-        android:text="Come on"
         android:textSize="60sp"
         android:padding="10dp"/>
 
@@ -55,9 +54,9 @@
         android:id="@+id/tv_DetailedPlotSynopsis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/tv_DetailedTitle"
+        android:layout_below="@id/iv_DetailedThumbnail"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="317dp" />
+        android:layout_marginStart="10dp" />
 
 </RelativeLayout>
