--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -2,50 +2,54 @@
 <RelativeLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailedActivity"
-    >
+    tools:context=".DetailedActivity">
 
 
     <TextView
         android:id="@+id/tv_DetailedTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/detailedActMovieTitleColor"
+        android:background="@color/detailedActMovieTitleBackround"
+        android:textColor="@color/detailedTitleFont"
         android:textSize="60sp"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        />
 
     <ImageView
         android:id="@+id/iv_DetailedThumbnail"
-        android:layout_width="150dp"
-        android:layout_height="@dimen/detailedActivityLinearLayoutHeight"
+        android:layout_width="@dimen/detailedThumbnailWidth"
+        android:layout_height="@dimen/detailedThumbnailHeight"
         android:layout_below="@id/tv_DetailedTitle"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:padding="6dp" />
+        android:scaleType="fitStart"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp" />
 
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="@dimen/detailedActivityLinearLayoutHeight"
         android:layout_below="@id/tv_DetailedTitle"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:layout_toRightOf="@id/iv_DetailedThumbnail">
+        android:layout_toEndOf="@id/iv_DetailedThumbnail"
+        android:gravity="center_vertical|start"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_DetailedReleaseDate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/moviedDetailsFont" />
 
 
         <TextView
             android:id="@+id/tv_DetailedUserRating"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:textSize="@dimen/moviedDetailsFont" />
 
 
     </LinearLayout>
@@ -57,6 +61,8 @@
         android:layout_below="@id/iv_DetailedThumbnail"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp" />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:textSize="@dimen/synopisFont"/>
 
 </RelativeLayout>
