--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -14,6 +14,7 @@
         android:id="@+id/iv_thumbnail"
         android:scaleType="fitXY"
         android:padding="6dp"
+        android:contentDescription="@string/content_desc"
         />
 
 </FrameLayout>
