--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="mainBackgroundColour">#c4d6f2</color>
-    <color name="detailedActMovieTitleColor">#7398d1</color>
+    <color name="detailedActMovieTitleBackround">#7398d1</color>
+    <color name="detailedTitleFont">#cc2504</color>
 </resources>
