--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <dimen name="detailedActivityLinearLayoutHeight">200dp</dimen>
-
+    <dimen name="moviedDetailsFont">17sp</dimen>
+    <dimen name="synopisFont">16sp</dimen>
+    <dimen name="detailedThumbnailWidth">150dp</dimen>
+    <dimen name="detailedThumbnailHeight">200dp</dimen>
 
 </resources>
