--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@color/mainBackgroundColour">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/noIntenetConnection"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            android:id="@+id/txtNoInternet"
+            />
+    </RelativeLayout>
 
 
     <android.support.v7.widget.RecyclerView
@@ -14,4 +27,4 @@
         android:id="@+id/rv_recyclerView"/>
 
 
-</RelativeLayout>
+</FrameLayout>
