--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -25,7 +25,8 @@
         android:layout_below="@id/tv_DetailedTitle"
         android:scaleType="fitStart"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/content_desc"/>
 
     <LinearLayout
         android:layout_width="250dp"
