Tried implementing retrofit for the JSON for trailers and reviews. It did not work. Save point

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <dimen name="detailedActivityLinearLayoutHeight">200dp</dimen>
-    <dimen name="moviedDetailsFont">17sp</dimen>
+    <dimen name="moviesDetailsFont">17sp</dimen>
     <dimen name="synopisFont">16sp</dimen>
     <dimen name="detailedThumbnailWidth">150dp</dimen>
     <dimen name="detailedThumbnailHeight">200dp</dimen>
