--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
 <RelativeLayout
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailedActivity">
@@ -42,7 +46,7 @@
             android:id="@+id/tv_DetailedReleaseDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/moviedDetailsFont" />
+            android:textSize="@dimen/moviesDetailsFont" />
 
 
         <TextView
@@ -50,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
-            android:textSize="@dimen/moviedDetailsFont" />
+            android:textSize="@dimen/moviesDetailsFont" />
 
 
     </LinearLayout>
@@ -64,6 +68,27 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:textSize="@dimen/synopisFont"/>
+        android:textSize="@dimen/synopisFont" />
+
+    <TextView
+        android:id="@+id/tv_Trailer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_DetailedPlotSynopsis"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="42dp"
+        android:text="@string/trailer"
+        android:textSize="@dimen/moviesDetailsFont"
+        android:textStyle="bold" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_Trailer"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        />
 
 </RelativeLayout>
+
+</ScrollView>
